# extralit

./: .codecov.yml  .dockerignore  .env.test  .gitignore  .pre-commit-config.yaml  404.html  API_DIFFERENCES.md  CITATION.cff  CLI_CONTRIBUTING.md  CLI_README.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  Pipfile  README.md  Tiltfile  codecov.yml  docker-compose.yaml  prod.Tiltfile  pyproject.toml  repo.md  tasks.md  test_live_server.py  test_schema.json  test_simple_connection.py  versions.json
argilla/: .gitignore  .pdm-python  CHANGELOG.md  README.md  docker-compose.yaml  environment_dev.yml  mkdocs.yml  pyproject.toml  test_cli_with_server.py
argilla/docker/: extralit.dockerfile
argilla/docs/: cli_commands.md  faq.md  glossary.md  index.md  workspace_api.md
argilla/docs/admin_guide/: annotate.md  custom_fields.md  dataset.md  distribution.md  docker_deployment.md  index.md  installation.md  k8s_deployment.md  migrate_from_legacy_datasets.md  record.md  upgrading.md  use_markdown_to_format_rich_content.md  user.md
argilla/docs/community/: adding_language.md  contributor.md  developer.md  index.md  release_guide.md
argilla/docs/community/integrations/: llamaindex_rag_github.ipynb
argilla/docs/getting_started/: development_setup.md  faq.md  how-to-configure-argilla-on-huggingface.md  how-to-deploy-argilla-with-docker.md  installation.md  quickstart.md
argilla/docs/how_to_guides/: migrate_from_legacy_datasets.md
argilla/docs/notebooks/: quickstart_workflow_feedback.ipynb
argilla/docs/reference/argilla/: client.md  markdown.md  search.md  users.md  workspaces.md
argilla/docs/reference/argilla-server/: configuration.md  sso_keycloak.md  telemetry.md
argilla/docs/reference/argilla/datasets/: dataset_records.md  datasets.md
argilla/docs/reference/argilla/records/: records.md  responses.md  suggestions.md  vectors.md
argilla/docs/reference/argilla/settings/: fields.md  metadata_property.md  questions.md  settings.md  task_distribution.md  vectors.md
argilla/docs/scripts/: gen_changelog.py
argilla/docs/stylesheets/: extra.css
argilla/docs/tutorials/: image_classification.ipynb  image_preference.ipynb  index.md  text_classification.ipynb  token_classification.ipynb
argilla/docs/user_guide/: command_line_interface.md  core_concepts.md  index.md  multi_schemas.md  overview.md  schema_definition.md  user_guide.md
argilla/scripts/: build_frontend.sh  end2end_examples.py
argilla/src/argilla/: __init__.py  _version.py  client.py  client.py.bak  suggestions.py
argilla/src/argilla/_api/: _client.py  _document.py  _questions.py  _token.py  _workspaces.py
argilla/src/argilla/_api/_http/: _client.py
argilla/src/argilla/_models/: __init__.py  _document.py  _documents.py  _files.py
argilla/src/argilla/_models/_record/: _suggestion.py
argilla/src/argilla/_models/_settings/: _fields.py  _questions.py
argilla/src/argilla/cli/: __init__.py  app.py  callback.py  rich.py  typer_ext.py
argilla/src/argilla/cli/datasets/: __init__.py  __main__.py
argilla/src/argilla/cli/documents/: __init__.py  __main__.py  add.py  delete.py  list.py
argilla/src/argilla/cli/extraction/: __init__.py  __main__.py  export.py
argilla/src/argilla/cli/files/: __init__.py  __main__.py  delete.py  download.py  list.py  upload.py
argilla/src/argilla/cli/info/: __init__.py  __main__.py
argilla/src/argilla/cli/login/: __init__.py  __main__.py
argilla/src/argilla/cli/logout/: __init__.py  __main__.py
argilla/src/argilla/cli/schemas/: __main__.py  delete.py  download.py  list.py  upload.py
argilla/src/argilla/cli/training/: __init__.py  __main__.py
argilla/src/argilla/cli/users/: __init__.py  __main__.py
argilla/src/argilla/cli/whoami/: __init__.py  __main__.py
argilla/src/argilla/cli/workspaces/: __init__.py  __main__.py
argilla/src/argilla/client/: __init__.py  core.py  enums.py  login.py  resources.py  singleton.py  workspaces.py
argilla/src/argilla/records/: _dataset_records.py  _search.py
argilla/src/argilla/records/_io/: _datasets.py  _generic.py  _json.py
argilla/src/argilla/settings/: _field.py  _question.py
argilla/src/argilla/users/: _resource.py
argilla/src/argilla/workspaces/: _resource.py
argilla/src/extralit/: app.py  constants.py
argilla/src/extralit/convert/: html_table.py  markdown.py
argilla/src/extralit/extraction/: chunking.py  extraction.py  prompts.py  query.py  schema.py  storage.py  surya_ocr.py  utils.py  vector_index.py  vector_store.py
argilla/src/extralit/extraction/models/: __init__.py  paper.py  response.py  schema.py
argilla/src/extralit/metrics/: grits.py  utils.py
argilla/src/extralit/pipeline/export/: dataset.py  record.py
argilla/src/extralit/pipeline/ingest/: paper.py  record.py  segment.py  (+1 more)
argilla/src/extralit/preprocessing/: alignment.py  document.py  text.py
argilla/src/extralit/schema/: __init__.py  registry.py
argilla/src/extralit/server/: app.py
argilla/src/extralit/storage/: files.py
argilla/tests/: test_live_server.py
argilla/tests/extralit/: conftest.py  utils.py
argilla/tests/extralit/apis/: test_base.py
argilla/tests/extralit/metrics/: test_extraction.py
argilla/tests/extralit/preprocessing/: test_document.py
argilla/tests/extralit/server/: test_app.py
argilla/tests/integration/: test_add_records.py  test_cli_commands.py  test_export_dataset.py  test_import_features.py  test_manage_users.py  test_manage_workspaces.py  test_search_records.py  test_workspace_documents.py  test_workspace_files.py  test_workspace_schemas.py
argilla/tests/unit/api/: test_workspace_files.py  test_workspace_files_api.py  test_workspace_schemas.py  test_workspace_schemas_api.py
argilla/tests/unit/cli/: test_cli_app.py  test_cli_datasets.py  test_cli_extraction.py  test_cli_schemas.py  test_cli_training.py  test_cli_users.py  test_cli_workspaces.py  test_datasets.py  test_extraction.py  test_schemas.py  test_training.py  test_users.py  test_workspaces.py
argilla/tests/unit/models/: __init__.py
argilla/tests/unit/test_io/: test_generic.py
argilla/tests/unit/utils/: test_dependency.py
(+1406 files in other folders)
