[project]
name = "extralit"
description = "Open-source tool for accurate & fast scientific literature data extraction with LLM and human-in-the-loop."
authors = [
    { name = "Jonny Tran", email = "nhat.c.tran@gmail.com" },
]
maintainers = [
    { name = "Jonny Tran", email = "nhat.c.tran@gmail.com" },
]
requires-python = ">=3.9,!=3.10.0"
readme = "README.md"
license = { text = "Apache 2.0" }

dynamic = ["version"]

dependencies = [
    "httpx>=0.26.0",
    "pydantic>=2.6.0, <3.0.0",
    "huggingface_hub>=0.22.0",
    "tqdm>=4.60.0",
    "rich>=10.0.0",
    "datasets>=2.0.0",
    "pillow>=9.5.0",
    "standardwebhooks>=1.0.0",
    "typer>=0.9.0",

    # for environment variables
    "python-dotenv",

    # for extralit
    "minio",
    "html5lib",
    "fastapi < 1.0.0",
    "pypandoc ~= 1.13",
    "beautifulsoup4 ~= 4.12.2",
    "pandas ~= 2.2.2",
    "pandera[io] ~= 0.19.3",
    "numpy ~= 1.26.4",
    "spacy ~= 3.7.2",
    "pyarrow == 14.*",
    "natsort ~= 8.4.0",
    "rapidfuzz ~= 3.8.1",
    "dill ~= 0.3.8",
    "json-repair ~= 0.19.2",
    "fastparquet",
    "tiktoken",
    "pymupdf",

    # for llama-index
    "llama-index ~= 0.10.68",
    "llama-index-core ~= 0.10.68",
    "llama-index-callbacks-langfuse ~= 0.1.6",
    "llama-index-llms-openai ~= 0.1.31",
    "llama-index-embeddings-openai ~=0.1.11",
    "llama-index-multi-modal-llms-openai",

    # for weaviate vector db
    "weaviate-client >= 4",
    "llama-index-vector-stores-weaviate ~= 1.0.0",
]
nlp = [
    "textdescriptives",
    "setfit ~= 0.7.0",
]
ocr = [
    "nougat-ocr[api]",
    "timm == 0.5.4",
    "transformers ~= 4.25.1"
]
pdf = [
    "unstructured[pdf] ~= 0.12.3",
    "llmsherpa ~= 0.1.3",
    "python-doctr ~= 0.8.1",
    "deepdoctection",
    "pypdf",
    "pypdfium2",
    "pymupdf",
    "pdf2image ~= 1.16.0",
]
legacy = ["argilla-v1[listeners]"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120

[tool.pdm]
distribution = true

[tool.pdm.version]
source = "file"
path = "src/argilla/_version.py"

[tool.pdm.dev-dependencies]
dev = [
    "ipython>=8.12.3",
    "pytest>=7.4.4",
    "flake8>=5.0.4",
    "ruff>=0.1.12",
    "pytest-mock>=3.12.0",
    "pytest-httpx ~=0.29.0",
    "black>=23.12.1",
    "build>=1.0.3",
    "pre-commit>=3.5.0",
    "mkdocs-material >= 9.5.17",
    "mkdocstrings[python] >= 0.24.0",
    "mkdocs-literate-nav >= 0.6.1",
    "mkdocs-section-index >= 0.3.8",
    "mkdocs-gen-files >= 0.5.0",
    "mkdocs-open-in-new-tab >= 1.0.3",
    "material-plausible-plugin>=0.2.0",
    "mike >= 2.0.0",
    "Pillow >= 9.5.0",
    "CairoSVG >= 2.7.1",
    "mknotebooks >= 0.8.0",
    "pytest-retry>=1.5",
    "pyarrow~=14.0.0",
]

[tool.pdm.scripts]
test = { cmd = "pytest tests", env_file = ".env.test" }
lint = "ruff check"
format = "black ."
all = { composite = ["format", "lint", "test"] }

[project.scripts]
extralit = "argilla.cli.app:app"
